--- a/public/writing.html
+++ b/public/writing.html
@@ -14,7 +14,7 @@
 <div id="preamble" class="status">
 <div class='topnav'>
                                       <a href='/portfolio.html'>Home</a> /
-                                      <a href='/writing.html'>Blog</a> /
+                                      <a href='/writing.html'>Writing</a> /
                                       <a href='/about.html'>About Me</a>
                                       </div>
 </div>
