--- a/public/01 - detecting judoka.html
+++ b/public/01 - detecting judoka.html
@@ -23,14 +23,14 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgb75f528">01 - Detecting Judoka</a>
+<li><a href="#org4d69623">01 - Detecting Judoka</a>
 <ul>
-<li><a href="#org746bf36">Not Reinventing the Wheel</a></li>
-<li><a href="#orga6e6441">Person Detection</a></li>
-<li><a href="#orge615ad4">Discerning Identity</a>
+<li><a href="#orga5a813d">Not Reinventing the Wheel</a></li>
+<li><a href="#orgf0ca325">Person Detection</a></li>
+<li><a href="#org6ce0793">Discerning Identity</a>
 <ul>
-<li><a href="#orgd0a0acb">BLUE</a></li>
-<li><a href="#org73d6585">WHITE</a></li>
+<li><a href="#org083f478">BLUE</a></li>
+<li><a href="#orgc1f45bd">WHITE</a></li>
 </ul>
 </li>
 </ul>
@@ -38,9 +38,9 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-orgb75f528" class="outline-2">
-<h2 id="orgb75f528">01 - Detecting Judoka</h2>
-<div class="outline-text-2" id="text-orgb75f528">
+<div id="outline-container-org4d69623" class="outline-2">
+<h2 id="org4d69623">01 - Detecting Judoka</h2>
+<div class="outline-text-2" id="text-org4d69623">
 <p>
 Now that I've had some time to think about what all is necessary, the first step should not be detecting the mat, but detecting the judoka (a person who practices judo). This is for three important reasons.
 </p>
@@ -60,9 +60,9 @@ Finally, we step into the fray.
 </p>
 </div>
 
-<div id="outline-container-org746bf36" class="outline-3">
-<h3 id="org746bf36">Not Reinventing the Wheel</h3>
-<div class="outline-text-3" id="text-org746bf36">
+<div id="outline-container-orga5a813d" class="outline-3">
+<h3 id="orga5a813d">Not Reinventing the Wheel</h3>
+<div class="outline-text-3" id="text-orga5a813d">
 <p>
 I could absolutely build an entire neural network and pose estimation library myself, but that would be a huge waste of time and I'd never get anything off the ground.
 </p>
@@ -73,9 +73,9 @@ There is a very well established open source library called <code>yolov8</code> 
 </div>
 </div>
 
-<div id="outline-container-orga6e6441" class="outline-3">
-<h3 id="orga6e6441">Person Detection</h3>
-<div class="outline-text-3" id="text-orga6e6441">
+<div id="outline-container-orgf0ca325" class="outline-3">
+<h3 id="orgf0ca325">Person Detection</h3>
+<div class="outline-text-3" id="text-orgf0ca325">
 <p>
 Take the following example video of myself being thrown with koshi guruma.
 </p>
@@ -108,7 +108,7 @@ Returns this frame:
 </p>
 
 
-<div id="org05ccd4a" class="figure">
+<div id="orgffd085f" class="figure">
 <p><img src="./assets/first_frame.jpg" alt="first_frame.jpg" />
 </p>
 </div>
@@ -191,16 +191,16 @@ Now we'll end up with the following image (cropped for presentation).
 </p>
 
 
-<div id="orgd85a1f1" class="figure">
+<div id="org3ffee83" class="figure">
 <p><img src="./assets/boundary box.jpg" alt="boundary box.jpg" />
 </p>
 </div>
 </div>
 </div>
 
-<div id="outline-container-orge615ad4" class="outline-3">
-<h3 id="orge615ad4">Discerning Identity</h3>
-<div class="outline-text-3" id="text-orge615ad4">
+<div id="outline-container-org6ce0793" class="outline-3">
+<h3 id="org6ce0793">Discerning Identity</h3>
+<div class="outline-text-3" id="text-org6ce0793">
 <p>
 In competitive judo, there is usually one judoka in a blue gi, and one in a white. There are other uniform rules where both will wear white, with either a blue or a white belt, or a white and a red belt, but those formats will be ignored for initial MVP. On the IJF Tour and the Olympics, one competitor wears blue and one wears white, so that's what we'll be using for our project.
 </p>
@@ -229,7 +229,7 @@ Here is the result of cropping the image to just Oscar to show what I mean.
 </p>
 
 
-<div id="org24d6678" class="figure">
+<div id="org6a8145a" class="figure">
 <p><img src="./assets/538-unaltered.jpg" alt="538-unaltered.jpg" />
 </p>
 </div>
@@ -254,30 +254,30 @@ Once we have this unaltered crop, we can convert it grayscale and determine the 
 </div>
 </div>
 
-<div id="outline-container-orgd0a0acb" class="outline-4">
-<h4 id="orgd0a0acb">BLUE</h4>
-<div class="outline-text-4" id="text-orgd0a0acb">
+<div id="outline-container-org083f478" class="outline-4">
+<h4 id="org083f478">BLUE</h4>
+<div class="outline-text-4" id="text-org083f478">
 <p>
 This cropped grayscale image has a total of <code>24416 / 8653701</code> total pixels greater than 127, and <code>87404 / 8653701</code> characters less than 127, so it's more dark than it is bright. This means it must be our blue gi.
 </p>
 
 
-<div id="org27d4646" class="figure">
+<div id="org927d293" class="figure">
 <p><img src="./assets/GI_COLOR.BLUE.jpg" alt="GI_COLOR.BLUE.jpg" />
 </p>
 </div>
 </div>
 </div>
 
-<div id="outline-container-org73d6585" class="outline-4">
-<h4 id="org73d6585">WHITE</h4>
-<div class="outline-text-4" id="text-org73d6585">
+<div id="outline-container-orgc1f45bd" class="outline-4">
+<h4 id="orgc1f45bd">WHITE</h4>
+<div class="outline-text-4" id="text-orgc1f45bd">
 <p>
 This cropped grayscale image has a total of <code>44877 / 10441142</code> total pixels greater than 127, and <code>29431 / 10441142</code> characters less than 127, so it's more bright than it is dark. This means it must be our white gi.
 </p>
 
 
-<div id="org1fda616" class="figure">
+<div id="org6e62e78" class="figure">
 <p><img src="./assets/GI_COLOR.WHITE.jpg" alt="GI_COLOR.WHITE.jpg" />
 </p>
 </div>
